--- a/BioArchLinux/r-pkgbuild/lilac.yaml
+++ b/BioArchLinux/r-pkgbuild/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-callr
 - r-cli
@@ -11,9 +11,9 @@ repo_depends:
 - r-processx
 - r-r6
 - r-rprojroot
-- r-withr
 update_on:
-- regex: pkgbuild_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=pkgbuild
+- source: rpkgs
+  pkgname: pkgbuild
+  repo: cran
+  md5: true
 - alias: r
