r-fansi: use metadata checks

--- a/BioArchLinux/r-fansi/PKGBUILD
+++ b/BioArchLinux/r-fansi/PKGBUILD
@@ -1,16 +1,24 @@
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
+# Contributor: peippo <christoph+aur@christophfink.com>
+# Contributor: Viktor Drobot (aka dviktor) linux776 [at] gmail [dot] com
+# Contributor: Grey Christoforo <first name at last name dot net>
+# Contributor: Ilja Kocken <i.j.kocken@uu.nl>
 
 _pkgname=fansi
 _pkgver=1.0.5
 pkgname=r-${_pkgname,,}
-pkgver=1.0.5
+pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='ANSI Control Sequence Aware String Functions'
-arch=('x86_64')
+pkgdesc="ANSI Control Sequence Aware String Functions"
+arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL)
 depends=(
   r
+)
+checkdepends=(
+  r-unitizer
 )
 optdepends=(
   r-knitr
@@ -18,14 +26,20 @@ optdepends=(
   r-unitizer
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('d1a4e4d70abf0bc079c2a20763b765bf')
 sha256sums=('c616ce357fbfd43253c366da578549a38066459058c22fb99c82fc05992e23f6')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" Rscript --vanilla run.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
