star: fix the missing depends

--- a/BioArchLinux/star/PKGBUILD
+++ b/BioArchLinux/star/PKGBUILD
@@ -7,8 +7,8 @@ pkgdesc="RNA-seq aligner"
 arch=('x86_64')
 url="https://github.com/alexdobin/STAR"
 license=('MIT')
-depends=()
-makedepends=()
+depends=('gcc-libs' 'zlib' 'glibc')
+makedepends=('vim')
 optdepends=()
 source=(https://github.com/alexdobin/STAR/archive/refs/tags/$pkgver.tar.gz)
 sha256sums=('0d1b71de6c5be1c5d90b32130d2abcd5785a4fc7c1e9bf19cc391947f2dc46e5')
