--- a/BioArchLinux/soapnuke/PKGBUILD
+++ b/BioArchLinux/soapnuke/PKGBUILD
@@ -8,15 +8,15 @@ pkgdesc="A Tool for integrated Quality Control and Preprocessing on FASTQ or BAM
 url="https://github.com/BGI-flexlab/SOAPnuke"
 license=('GPL3')
 arch=('x86_64')
-depends=('gcc-libs' 'zlib')
-makedepends=('make')
+depends=('gcc-libs' 'zlib' 'glibc')
+makedepends=('make' 'bc')
 source=("${url}/archive/refs/tags/${_pkgname}${pkgver}.tar.gz"
-	"https://github.com/BGI-flexlab/SOAPnuke/pull/63.patch")
+	"https://github.com/BGI-flexlab/SOAPnuke/pull/64.patch")
 sha512sums=('7c0df7ed88161b0dd1e601ff2a157375ded5c524bef6c6e37195099a0928b5a1b8d962504e798aa0604706acbbb912e97ac6faee5abd497d42081f66c787f962'
-            '0d040a5d7d470326ada585086ac677808976578a1323e5792c522773196bc48791137eb976b71005da05931459636815d3cb2ddadaef79021b2bfc8084f8d06b')
+            'a5b6b3518dc381714745c385c7822a68a6772df59ff783f21192a6f3eb6ef81c46a5eda4b3d8d96a31d20733be0f5ca035bfe262b202342ce94b4e6dd78e0abe')
 prepare() {
   cd "${srcdir}/${_pkgname}-$_pkgname$pkgver"
-  patch -p1 < $srcdir/63.patch
+  patch -p1 < $srcdir/64.patch
 }
 
 build() {
