--- a/BioArchLinux/python2/lilac.yaml
+++ b/BioArchLinux/python2/lilac.yaml
@@ -9,5 +9,5 @@ post_build_script: |
   git_pkgbuild_commit()
 update_on:
   - source: cmd
-    cmd: curl -sS https://www.python.org/downloads/ | grep 'class="release-number"' | sed 's/</ /g' | awk '{print$5}' | grep '2\.[0-9]' | head -n 1
+    cmd: curl -sS https://www.python.org/ftp/python/ | sed 's/"/ /g;s/\// /g' | awk '{print $3}' | grep '^2' | sort -V | tail -n 1
   - alias: libssl
