r-sp: use metadata checks

--- a/BioArchLinux/r-sp/PKGBUILD
+++ b/BioArchLinux/r-sp/PKGBUILD
@@ -1,14 +1,17 @@
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
+# Contributor: Viktor Drobot (aka dviktor) linux776 [at] gmail [dot] com
+# Contributor: Jooa <aur at (name) dot xyz>
 
 _pkgname=sp
 _pkgver=2.1-1
 pkgname=r-${_pkgname,,}
-pkgver=2.1.1
+pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='Classes and Methods for Spatial Data'
-arch=('x86_64')
+pkgdesc="Classes and Methods for Spatial Data"
+arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL)
 depends=(
   r
 )
@@ -16,22 +19,22 @@ optdepends=(
   r-deldir
   r-gstat
   r-knitr
-  r-maptools
+  r-raster
   r-rcolorbrewer
-  r-rgdal
-  r-rgeos
   r-rmarkdown
   r-sf
+  r-terra
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('15ae0ca6fd6730312d3ac40c6aa55858')
 sha256sums=('2d34cde2a8d5c7876425f99d9d3b24ae192430d316bd2a397a62b52412b1405b')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
