--- a/BioArchLinux/minimap2/PKGBUILD
+++ b/BioArchLinux/minimap2/PKGBUILD
@@ -10,7 +10,7 @@ url="https://github.com/lh3/${pkgname}"
 license=('MIT')
 depends=('zlib' 'glibc')
 provides=('minimap2-lite' 'sdust')
-source=("${pkgver}.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz")
+source=("${pkgname}-${pkgver}.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz")
 sha256sums=('f4c8c3459c7b87e9de6cbed7de019b48d9337c2e46b87ba81b9f72d889420b3c')
 
 prepare() {
@@ -34,15 +34,17 @@ build() {
 
 package() {
   cd "${pkgname}-${pkgver}"
-  install -Dm644 LICENSE.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
-  install -Dm644 libminimap2.a "${pkgdir}/usr/lib/libminimap2.a"
-  install -Dm755 ${pkgname} "${pkgdir}/usr/bin/${pkgname}"
-  install -Dm755 minimap2-lite "${pkgdir}/usr/bin/minimap2-lite"
-  install -Dm755 sdust "${pkgdir}/usr/bin/sdust"
-  # install test Data
-  install -d ${pkgdir}/usr/share/${pkgname}/
-  cp -r test/ ${pkgdir}/usr/share/${pkgname}/
+  install -Dm644 LICENSE.txt "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
+  install -Dm644 libminimap2.a "${pkgdir}"/usr/lib/libminimap2.a
+  install -Dm755 ${pkgname} "${pkgdir}"/usr/bin/${pkgname}
+  install -Dm755 minimap2-lite "${pkgdir}"/usr/bin/minimap2-lite
+  install -Dm755 sdust "${pkgdir}"/usr/bin/sdust
   # install Manpages
-  mkdir -p ${pkgdir}/usr/share/man/man1/
-  cp  minimap2.1 ${pkgdir}/usr/share/man/man1/minimap2.1
+  install -Dm644 -t "$pkgdir/usr/share/man/man1" minimap2.1
+  # install test Data
+  install -d ${pkgdir}/usr/share/${pkgname}/test
+  cd test
+  for file in *; do
+    install -Dm644 "$file" "${pkgdir}"/usr/share/${pkgname}/test/"${file}"
+  done
 }
