--- a/BioArchLinux/r-flowcore/lilac.yaml
+++ b/BioArchLinux/r-flowcore/lilac.yaml
@@ -1,19 +1,25 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
-- r-bh
 - r-biobase
 - r-biocgenerics
-- r-cpp11
 - r-cytolib
 - r-matrixstats
 - r-rcpp
-- r-rprotobuflib
 - r-s4vectors
+repo_makedepends:
+- r-bh
+- r-cpp11
+- r-rprotobuflib
+- r-flowworkspacedata
+- r-testthat
 update_on:
-- regex: flowCore_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/flowCore
+- source: rpkgs
+  pkgname: flowCore
+  repo: bioc
+  md5: true
 - alias: r
+update_on_build:
+- pkgbase: r-cytolib
