--- a/BioArchLinux/mediawiki-extensions-templatestyles/lilac.yaml
+++ b/BioArchLinux/mediawiki-extensions-templatestyles/lilac.yaml
@@ -3,9 +3,7 @@ maintainers:
   - github: starsareintherose
     email: kuoi@bioarchlinux.org
 post_build_script: |
-  git_add_files('PKGBUILD')
   git_pkgbuild_commit()
-  git_commit() 
 update_on:
   - source: cmd
-    cmd: curl -sS https://raw.githubusercontent.com/archlinux/svntogit-community/packages/mediawiki/trunk/PKGBUILD | grep 'pkgver=' | sed 's/=/ /g' | awk '{print $2}' | cut -f 1,2 -d"." | sed 's/\./_/g'
+    cmd: curl -sS https://gitlab.archlinux.org/archlinux/packaging/packages/mediawiki/-/raw/main/PKGBUILD  | grep 'pkgver=' | sed 's/=/ /g' | awk '{print $2}' | cut -f 1,2 -d"." | sed 's/\./_/g'
