--- a/BioArchLinux/minimap2/PKGBUILD
+++ b/BioArchLinux/minimap2/PKGBUILD
@@ -9,20 +9,16 @@ arch=('x86_64')
 url="https://github.com/lh3/${pkgname}"
 license=('MIT')
 depends=('zlib' 'glibc')
-provides=('minimap2-lite' 'sdust')
-source=("${pkgname}-${pkgver}.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz")
-sha256sums=('f4c8c3459c7b87e9de6cbed7de019b48d9337c2e46b87ba81b9f72d889420b3c')
+provides=('minimap2-lite' 'sdust' 'libminimap2.so')
+source=("${pkgname}-${pkgver}.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz"
+        "hardening.patch")
+sha256sums=('f4c8c3459c7b87e9de6cbed7de019b48d9337c2e46b87ba81b9f72d889420b3c'
+            '792146de76e9003cccb429623eae715ab0349396eafda3001bdec940323e9356')
 
 prepare() {
-  cd "${pkgname}-${pkgver}"
   # Add hardening flags for binaries
-  sed -i '1s/CFLAGS=/CFLAGS+=/' Makefile
-  sed -i '2s/CPPFLAGS=/CPPFLAGS+=/' Makefile
-  sed -i '52s/$(LIBS)/$(LIBS) $(LDFLAGS)/' Makefile
-  sed -i '55s/$(LIBS)/$(LIBS) $(LDFLAGS)/' Makefile
-  sed -i '61s/-lz/-lz $(LDFLAGS)/' Makefile
-  sed -i '57a\\t\ \trm -f "$@"' Makefile
-  sed -i '59s/-csru/csrD/' Makefile
+  cd "${pkgname}-${pkgver}"
+  patch -p1 < "${srcdir}"/hardening.patch
 }
 
 build() {
@@ -35,7 +31,7 @@ build() {
 package() {
   cd "${pkgname}-${pkgver}"
   install -Dm644 LICENSE.txt "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
-  install -Dm644 libminimap2.a "${pkgdir}"/usr/lib/libminimap2.a
+  install -Dm644 libminimap2.so "${pkgdir}"/usr/lib/libminimap2.so
   install -Dm755 ${pkgname} "${pkgdir}"/usr/bin/${pkgname}
   install -Dm755 minimap2-lite "${pkgdir}"/usr/bin/minimap2-lite
   install -Dm755 sdust "${pkgdir}"/usr/bin/sdust
