--- a/BioArchLinux/minimap2/lilac.yaml
+++ b/BioArchLinux/minimap2/lilac.yaml
@@ -12,3 +12,18 @@ update_on:
     github: lh3/minimap2
     use_max_tag: true
     prefix: 'v'
+  - source: alpm
+    alpm: zlib
+    repo: core
+    provided: libz.so
+    strip_release: true
+  - source: alpm
+    alpm: glibc
+    repo: core
+    provided: libm.so
+    strip_release: true
+  - source: alpm
+    alpm: glibc
+    repo: core
+    provided: libc.so
+    strip_release: true
