--- a/BioArchLinux/r-rsq/lilac.yaml
+++ b/BioArchLinux/r-rsq/lilac.yaml
@@ -1,12 +1,14 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
+- r-deming
 - r-deriv
 - r-lme4
 update_on:
-- regex: rsq_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=rsq
+- source: rpkgs
+  pkgname: rsq
+  repo: cran
+  md5: true
 - alias: r
