--- a/BioArchLinux/r-utf8/lilac.yaml
+++ b/BioArchLinux/r-utf8/lilac.yaml
@@ -1,9 +1,10 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: utf8_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=utf8
+- source: rpkgs
+  pkgname: utf8
+  repo: cran
+  md5: true
 - alias: r
