--- a/BioArchLinux/r-agricolae/lilac.yaml
+++ b/BioArchLinux/r-agricolae/lilac.yaml
@@ -1,12 +1,12 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-algdesign
-- r-klar
 update_on:
-- regex: agricolae_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=agricolae
+- source: rpkgs
+  pkgname: agricolae
+  repo: cran
+  md5: true
 - alias: r
