--- a/BioArchLinux/r-spam/lilac.yaml
+++ b/BioArchLinux/r-spam/lilac.yaml
@@ -1,11 +1,23 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-dotcall64
+- r-rcpp
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: spam_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=spam
+- source: rpkgs
+  pkgname: spam
+  repo: cran
+  md5: true
 - alias: r
+- source: alpmfiles
+  pkgname: blas
+  filename: usr/lib/libblas\.so\.([^.]+)
+  repo: extra
+- source: alpmfiles
+  pkgname: lapack
+  filename: usr/lib/liblapack\.so\.([^.]+)
+  repo: extra
