r-limma: fix depends, use metadata checks

--- a/BioArchLinux/r-limma/lilac.yaml
+++ b/BioArchLinux/r-limma/lilac.yaml
@@ -1,9 +1,12 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
+repo_depends:
+- r-statmod
 update_on:
-- regex: limma_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/limma
+- source: rpkgs
+  pkgname: limma
+  repo: bioc
+  md5: true
 - alias: r
