--- a/BioArchLinux/r-delayedarray/lilac.yaml
+++ b/BioArchLinux/r-delayedarray/lilac.yaml
@@ -1,15 +1,17 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biocgenerics
 - r-iranges
 - r-matrixgenerics
 - r-s4arrays
 - r-s4vectors
+- r-sparsearray
 update_on:
-- regex: DelayedArray_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/DelayedArray
+- source: rpkgs
+  pkgname: DelayedArray
+  repo: bioc
+  md5: true
 - alias: r
