--- a/BioArchLinux/r-spicyr/lilac.yaml
+++ b/BioArchLinux/r-spicyr/lilac.yaml
@@ -12,7 +12,6 @@ repo_depends:
 - r-ggforce
 - r-ggplot2
 - r-iranges
-- r-lme4
 - r-lmertest
 - r-pheatmap
 - r-rlang
@@ -23,6 +22,7 @@ repo_depends:
 - r-spatstat.explore
 - r-spatstat.geom
 - r-summarizedexperiment
+- r-tibble
 - r-tidyr
 update_on:
 - source: rpkgs
