--- a/BioArchLinux/r-rfast/lilac.yaml
+++ b/BioArchLinux/r-rfast/lilac.yaml
@@ -4,6 +4,7 @@ maintainers:
   email: pekkarr@protonmail.com
 repo_depends:
 - r-rcpp
+- r-rcppparallel
 - r-rcppziggurat
 repo_makedepends:
 - r-rcpparmadillo
