--- a/BioArchLinux/r-osqp/PKGBUILD
+++ b/BioArchLinux/r-osqp/PKGBUILD
@@ -1,33 +1,45 @@
-# Maintainer: sukanka <su975853527@gmail.com>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: sukanka <su975853527@gmail.com>
 
 _pkgname=osqp
-_pkgver=0.6.3.1
+_pkgver=0.6.3.2
 pkgname=r-${_pkgname,,}
-pkgver=0.6.3.1
-pkgrel=1
+pkgver=${_pkgver//-/.}
+pkgrel=0
 pkgdesc="Quadratic Programming Solver using the 'OSQP' Library"
-arch=('x86_64')
+arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('Apache')
+license=(Apache)
 depends=(
-  r
   r-r6
   r-rcpp
+)
+makedepends=(
+  cmake
+)
+checkdepends=(
+  r-slam
+  r-testthat
 )
 optdepends=(
   r-slam
   r-testthat
 )
-makedepends=(cmake)
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('433265adae091202f90fb37e64013bb79d14c892392fc2b9005e4ae5c1de1b9d')
+md5sums=('d6b45409799ce483514cada5818fa47a')
+sha256sums=('18543b329a42be0f419dff4aa42f4401c2afb18f46276ce359853494dd803244')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla testthat.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
