--- a/BioArchLinux/r-ttservice/lilac.yaml
+++ b/BioArchLinux/r-ttservice/lilac.yaml
@@ -1,11 +1,13 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-dplyr
+- r-plotly
 update_on:
-- regex: ttservice_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=ttservice
+- source: rpkgs
+  pkgname: ttservice
+  repo: cran
+  md5: true
 - alias: r
