--- a/BioArchLinux/r-mpo.db/lilac.yaml
+++ b/BioArchLinux/r-mpo.db/lilac.yaml
@@ -1,23 +1,17 @@
 build_prefix: extra-x86_64
 maintainers:
-  - github: sukanka
-    email: su975853527@gmail.com
-post_build_script: |
-  git_pkgbuild_commit()
-  update_aur_repo()
-pre_build_script: |
-  for line in edit_file('PKGBUILD'):
-    if line.startswith('_pkgver='):
-      line = f'_pkgver={_G.newver}'
-    print(line)
-  update_pkgver_and_pkgrel(_G.newver.replace(':', '.').replace('-', '.'))
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
-  - r-annotationdbi
-  - r-annotationhub
-  - r-biocfilecache
-  - r-dbi
+- r-annotationdbi
+- r-annotationhub
+- r-biocfilecache
+- r-dbi
+repo_makedepends:
+- r-testthat
 update_on:
-  - regex: MPO.db_([\d._-]+).tar.gz
-    source: regex
-    url: https://bioconductor.org/packages/MPO.db
-  - alias: r
+- source: rpkgs
+  pkgname: MPO.db
+  repo: bioc-data-annotation
+  md5: true
+- alias: r
