--- a/BioArchLinux/r-peacoqc/lilac.yaml
+++ b/BioArchLinux/r-peacoqc/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-circlize
 - r-complexheatmap
@@ -11,7 +11,8 @@ repo_depends:
 - r-gridextra
 - r-plyr
 update_on:
-- regex: PeacoQC_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/PeacoQC
+- source: rpkgs
+  pkgname: PeacoQC
+  repo: bioc
+  md5: true
 - alias: r
