--- a/BioArchLinux/r-rnamodr/lilac.yaml
+++ b/BioArchLinux/r-rnamodr/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biocgenerics
 - r-biocparallel
@@ -23,8 +23,12 @@ repo_depends:
 - r-rsamtools
 - r-rtracklayer
 - r-s4vectors
+repo_makedepends:
+- r-rnamodr.data
+- r-testthat
 update_on:
-- regex: RNAmodR_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/RNAmodR
+- source: rpkgs
+  pkgname: RNAmodR
+  repo: bioc
+  md5: true
 - alias: r
