r-somnibus: use metadata checks

--- a/BioArchLinux/r-somnibus/lilac.yaml
+++ b/BioArchLinux/r-somnibus/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-annotatr
 - r-biocmanager
@@ -18,7 +18,8 @@ repo_depends:
 - r-vgam
 - r-yaml
 update_on:
-- regex: SOMNiBUS_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/SOMNiBUS
+- source: rpkgs
+  pkgname: SOMNiBUS
+  repo: bioc
+  md5: true
 - alias: r
