--- a/BioArchLinux/r-somnibus/PKGBUILD
+++ b/BioArchLinux/r-somnibus/PKGBUILD
@@ -1,16 +1,16 @@
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
 
 _pkgname=SOMNiBUS
-_pkgver=1.7.0
+_pkgver=1.10.0
 pkgname=r-${_pkgname,,}
-pkgver=1.7.0
-pkgrel=2
-pkgdesc='Smooth modeling of bisulfite sequencing'
-arch=('any')
+pkgver=${_pkgver//-/.}
+pkgrel=0
+pkgdesc="Smooth modeling of bisulfite sequencing"
+arch=(any)
 url="https://bioconductor.org/packages/${_pkgname}"
-license=('MIT')
+license=(MIT)
 depends=(
-  r
   r-annotatr
   r-biocmanager
   r-bsseq
@@ -40,15 +40,18 @@ optdepends=(
   r-txdb.hsapiens.ucsc.hg38.knowngene
 )
 source=("https://bioconductor.org/packages/release/bioc/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('1baf115a020f2ae781493ec36f0696a72c24ee8e5aaeb0ce7a01609881abaaa5')
+md5sums=('0865c015122f915127302bf751a10812')
+sha256sums=('4f464b57f1b26664210e3b43072969ec4eb77f6f1c7b0b15149692994318ba89')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
-  install -Dm644 "${_pkgname}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
+
+  install -d "$pkgdir/usr/share/licenses/$pkgname"
+  ln -s "/usr/lib/R/library/$_pkgname/LICENSE" "$pkgdir/usr/share/licenses/$pkgname"
 }
-# vim:set ts=2 sw=2 et:
