r-multimir: use metadata checks

--- a/BioArchLinux/r-multimir/lilac.yaml
+++ b/BioArchLinux/r-multimir/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-annotationdbi
 - r-biocgenerics
@@ -10,8 +10,11 @@ repo_depends:
 - r-rcurl
 - r-tibble
 - r-xml
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: multiMiR_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/multiMiR
+- source: rpkgs
+  pkgname: multiMiR
+  repo: bioc
+  md5: true
 - alias: r
