--- a/BioArchLinux/r-quantiseqr/lilac.yaml
+++ b/BioArchLinux/r-quantiseqr/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biobase
 - r-ggplot2
@@ -10,8 +10,11 @@ repo_depends:
 - r-rlang
 - r-summarizedexperiment
 - r-tidyr
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: quantiseqr_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/quantiseqr
+- source: rpkgs
+  pkgname: quantiseqr
+  repo: bioc
+  md5: true
 - alias: r
