--- a/BioArchLinux/r-geoexplorer/lilac.yaml
+++ b/BioArchLinux/r-geoexplorer/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biobase
 - r-car
@@ -33,8 +33,11 @@ repo_depends:
 - r-xfun
 - r-xml
 - r-xml2
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: GEOexplorer_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/GEOexplorer
+- source: rpkgs
+  pkgname: GEOexplorer
+  repo: bioc
+  md5: true
 - alias: r
